corregi error donde no aparecia getRoles en el archivo UsuarioPrincipal.java me faltaba esa funcion en Usuario.java